# 3D-engine-desktop

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
assets/shaders/: fragment.glsl  shader.frag  shader.vert  vertex.glsl
cmake/: Findglfw3.cmake  SourceList.cmake
src/: main.cpp
src/components/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Transform.cpp  Transform.h
src/core/: Component.cpp  Component.h  Engine.cpp  Engine.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Vector3.cpp  Vector3.h  Window.cpp  Window.h
src/engine/core/: Engine.h
src/engine/input/: InputHandler.h
src/objects/: Camera.cpp  Camera.h
src/utils/: loadShader.cpp  loadShader.h
